<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#333333"
        tools:context=".MainActivity">


    <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/opentrivia" />

    <TextView
            android:text="@string/category"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/game_info"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="23dp" android:id="@+id/spinnerCategory"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/textView" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/powered_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/game_info" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            />
    <TextView
            android:text="@string/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/spinnerDifficulty" app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStartQuiz"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:onClick="startGame"
            app:layout_constraintHorizontal_bias="0.532" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2"/>


    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
    <RadioGroup
            android:layout_width="332dp"
            android:layout_height="29dp"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDifficulty" android:id="@+id/radioGroup2"
            app:layout_constraintHorizontal_bias="0.695" android:orientation="horizontal">
        <RadioButton
                android:text="@string/multipleChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioMultipleChoice" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/yesNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioYesNo" android:layout_weight="1"/>
    </RadioGroup>

</android.support.constraint.ConstraintLayout>