<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".MultipleChoiceActivity">
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="196dp"
            android:layout_height="114dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" android:contentDescription="@string/logo"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/game_info"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="info"

            android:textColor="#ffffff"
            app:fontFamily="@font/allerta"
            android:contentDescription="content @android:string/fingerprint_icon_content_description"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/categoryName"/>
    <TextView
            android:text="@string/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            app:fontFamily="@font/allerta"
            android:id="@+id/question" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/game_info" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintHorizontal_bias="0.5"
            android:gravity="center_horizontal|center_vertical" android:textSize="18sp" android:textStyle="bold"/>
    <RadioGroup
            android:layout_width="348dp"
            android:layout_height="208dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/question" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/answer1"
                android:buttonTint="#ffffff"
                android:textColor="#ffffff"
                app:fontFamily="@font/allerta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/answer0" android:layout_weight="1"
                android:onClick="radioButtonClicked" android:layout_marginBottom="6dp" android:layout_marginTop="4dp"/>
        <RadioButton
                android:text="@string/answer2"
                android:buttonTint="#ffffff"
                android:textColor="#ffffff"
                app:fontFamily="@font/allerta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/answer1" android:layout_weight="1"
                android:onClick="radioButtonClicked" android:layout_marginBottom="6dp"/>
        <RadioButton
                android:text="@string/answer3"
                android:buttonTint="#ffffff"
                android:layout_width="match_parent"
                android:textColor="#ffffff"
                app:fontFamily="@font/allerta"
                android:layout_height="wrap_content" android:id="@+id/answer2" android:layout_weight="1"
                android:onClick="radioButtonClicked" android:layout_marginBottom="6dp"/>
        <RadioButton
                android:text="@string/answer4"
                android:buttonTint="#ffffff"
                android:textColor="#ffffff"
                app:fontFamily="@font/allerta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/answer3" android:layout_weight="1"
                android:onClick="radioButtonClicked" android:layout_marginBottom="4dp"/>
    </RadioGroup>

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
    <TextView
            android:text="Category Name"
            android:textColor="#ffffff"
            app:fontFamily="@font/allerta"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:id="@+id/categoryName"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textStyle="bold|italic" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextButton" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:onClick="nextBtnClicked"/>

</androidx.constraintlayout.widget.ConstraintLayout>